@@ -856,4 +856,7 @@
            including the name field in the search rather than conducting an additional details search.
            Updated the QuoteServer Search command docs to reflect the new returned format.
 
+20101020:  Updating the dialogs to use a slightly different approach to popup confirm dialogs. Using yes/no buttons
+           instead of the checkbox. Looks cleaner and less mouse interaction.
+
 
